# AIMLESS

./: pyproject.toml
input_domains/: DSM_domains.json  HiTOP_domains.json  RDoC_domains.json  generated_domains.json  psych_domains.json
prompts/: DSM_prompt.txt  HiTOP_prompt.txt  RDoC_prompt.txt  generated_prompt.txt  generated_separate_prompt.txt  psych_prompt.txt
results/: DSM_hierarchy.json  DSM_openai_hierarchy.csv  HiTOP_hierarchy.csv  HiTOP_hierarchy.json  HiTOP_openai_hierarchy.csv  RDoC_hierarchy.csv  RDoC_hierarchy.json  embeddings  generated_separate_anthropic_hierarchy_max10_1.csv  generated_separate_anthropic_hierarchy_max10_1.json  generated_separate_anthropic_hierarchy_max10_2.csv  generated_separate_anthropic_hierarchy_max10_2.json  generated_separate_anthropic_hierarchy_max10_3.csv  generated_separate_anthropic_hierarchy_max10_3.json  generated_separate_anthropic_hierarchy_max5_1.csv  generated_separate_anthropic_hierarchy_max5_1.json  generated_separate_anthropic_hierarchy_max5_2.csv  generated_separate_anthropic_hierarchy_max5_2.json  generated_separate_anthropic_hierarchy_max5_3.csv  generated_separate_anthropic_hierarchy_max5_3.json  generated_separate_openai_hierarchy_max10_1.csv  generated_separate_openai_hierarchy_max10_1.json  generated_separate_openai_hierarchy_max10_2.csv  generated_separate_openai_hierarchy_max10_2.json  generated_separate_openai_hierarchy_max5.csv  generated_separate_openai_hierarchy_max5.json  generated_separate_openai_hierarchy_max5_2.csv  generated_separate_openai_hierarchy_max5_2.json  psych_hierarchy.json  (+8 more)
(+33 files in other folders)
