[tool.poetry]
name = "aimless"
version = "0.1.0"
description = "A beautiful description."
authors = [""]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "APP_NAME", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
anthropic = "^0.39.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"
openai = "^1.54.1"
instructor = "^1.6.3"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
ruff = "^0.7.2"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
